--- a/Basic_HTML_and_CSS/One-Page Website/css/one-page-website.css
+++ b/Basic_HTML_and_CSS/One-Page Website/css/one-page-website.css
@@ -20,3 +20,16 @@ html {
     width: 300px;
     height: 200px;
 }
+
+.signup input[type="text"] {
+    color: #c7c7c7;
+    padding: 1px;
+    width: 50%;
+    height: 25px;
+    border: 1px solid #090B0D;
+    border-radius: 5px;
+    margin: 10px 1em;
+    background: #13161B;
+    box-shadow: inset 0px 3px 0px 0px rgba(5,5,5,0.15);
+    font-family: 'Raleway', sans-serif;
+}
